[gd_scene load_steps=10 format=3 uid="uid://bgdbiubpob2jv"]

[ext_resource type="Script" path="res://ui/in_game_menus/pause_menu/options_menu/options_menu.gd" id="1_ia525"]
[ext_resource type="Script" path="res://ui/in_game_menus/pause_menu/options_menu/GraphicsOptions.gd" id="2_5mnjn"]
[ext_resource type="Theme" uid="uid://jd7ot0ssesa0" path="res://ui/themes/general_theme.tres" id="2_ed8fp"]
[ext_resource type="Script" path="res://ui/in_game_menus/pause_menu/options_menu/SoundOptions.gd" id="2_slshr"]
[ext_resource type="FontFile" uid="uid://bdx6aesmcc6kc" path="res://ui/fonts/EBGaramond-ExtraBold.ttf" id="3_fn3s3"]
[ext_resource type="FontFile" uid="uid://cwi0n3kesweuw" path="res://ui/fonts/EBGaramond-Bold.ttf" id="4_tn8j0"]

[sub_resource type="Animation" id="Animation_83a0w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vqndx"]
resource_name = "slide_in"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-320, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4yy0k"]
_data = {
"RESET": SubResource("Animation_83a0w"),
"slide_in": SubResource("Animation_vqndx")
}

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ia525")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.5
offset_top = 20.0
offset_right = 63.5
offset_bottom = 43.0
grow_horizontal = 2
theme = ExtResource("2_ed8fp")
theme_override_fonts/font = ExtResource("3_fn3s3")
theme_override_font_sizes/font_size = 14
text = "OPTIONS:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GraphicsOptions" type="VBoxContainer" parent="ColorRect"]
layout_mode = 2
offset_left = 24.0
offset_top = 48.0
offset_right = 116.0
offset_bottom = 138.0
script = ExtResource("2_5mnjn")

[node name="GSettingsLabel" type="Label" parent="ColorRect/GraphicsOptions"]
layout_mode = 2
theme = ExtResource("2_ed8fp")
theme_override_fonts/font = ExtResource("4_tn8j0")
theme_override_font_sizes/font_size = 12
text = "Graphics Options:"
metadata/_edit_lock_ = true

[node name="ResLabel" type="Label" parent="ColorRect/GraphicsOptions"]
layout_mode = 2
theme = ExtResource("2_ed8fp")
theme_override_font_sizes/font_size = 11
text = "Window Resolution"
metadata/_edit_lock_ = true

[node name="ResOptions" type="OptionButton" parent="ColorRect/GraphicsOptions"]
layout_mode = 2
theme = ExtResource("2_ed8fp")
theme_override_font_sizes/font_size = 9
item_count = 2
selected = 0
popup/item_0/text = "640x360"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
metadata/_edit_lock_ = true

[node name="FScreenCheck" type="CheckBox" parent="ColorRect/GraphicsOptions"]
layout_mode = 2
theme = ExtResource("2_ed8fp")
theme_override_font_sizes/font_size = 11
text = "Fullscreen"
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
offset_left = 178.0
offset_top = 48.0
offset_right = 293.0
offset_bottom = 125.0

[node name="SoundOptions" type="VBoxContainer" parent="ColorRect/ScrollContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
script = ExtResource("2_slshr")
metadata/_edit_lock_ = true

[node name="SSetingsLabel" type="Label" parent="ColorRect/ScrollContainer/SoundOptions"]
layout_mode = 2
theme = ExtResource("2_ed8fp")
theme_override_fonts/font = ExtResource("4_tn8j0")
theme_override_font_sizes/font_size = 12
text = "Audio Options:"
metadata/_edit_lock_ = true

[node name="MasterLabel" type="Label" parent="ColorRect/ScrollContainer/SoundOptions"]
layout_mode = 2
theme = ExtResource("2_ed8fp")
text = "Master"
metadata/_edit_lock_ = true

[node name="MasterSlider" type="HSlider" parent="ColorRect/ScrollContainer/SoundOptions"]
layout_mode = 2
min_value = -20.0
max_value = 10.0
metadata/_edit_lock_ = true

[node name="MusicLabel" type="Label" parent="ColorRect/ScrollContainer/SoundOptions"]
layout_mode = 2
theme = ExtResource("2_ed8fp")
text = "Music"
metadata/_edit_lock_ = true

[node name="MusicSlider" type="HSlider" parent="ColorRect/ScrollContainer/SoundOptions"]
layout_mode = 2
min_value = -20.0
max_value = 10.0
metadata/_edit_lock_ = true

[node name="SFXLabel" type="Label" parent="ColorRect/ScrollContainer/SoundOptions"]
layout_mode = 2
theme = ExtResource("2_ed8fp")
text = "SFX"
metadata/_edit_lock_ = true

[node name="SFXSlider" type="HSlider" parent="ColorRect/ScrollContainer/SoundOptions"]
layout_mode = 2
min_value = -20.0
max_value = 10.0
metadata/_edit_lock_ = true

[node name="MuteCheck" type="CheckBox" parent="ColorRect/ScrollContainer/SoundOptions"]
layout_mode = 2
theme = ExtResource("2_ed8fp")
theme_override_font_sizes/font_size = 11
text = "Mute All"
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.5
offset_top = -34.0
offset_right = 28.5
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.75, 0.75)
theme = ExtResource("2_ed8fp")
theme_override_font_sizes/font_size = 13
text = "Return"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4yy0k")
}

[connection signal="item_selected" from="ColorRect/GraphicsOptions/ResOptions" to="ColorRect/GraphicsOptions" method="_on_res_options_item_selected"]
[connection signal="toggled" from="ColorRect/GraphicsOptions/FScreenCheck" to="ColorRect/GraphicsOptions" method="_on_f_screen_check_toggled"]
[connection signal="value_changed" from="ColorRect/ScrollContainer/SoundOptions/MasterSlider" to="ColorRect/ScrollContainer/SoundOptions" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="ColorRect/ScrollContainer/SoundOptions/MusicSlider" to="ColorRect/ScrollContainer/SoundOptions" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="ColorRect/ScrollContainer/SoundOptions/SFXSlider" to="ColorRect/ScrollContainer/SoundOptions" method="_on_sfx_slider_value_changed"]
[connection signal="toggled" from="ColorRect/ScrollContainer/SoundOptions/MuteCheck" to="ColorRect/ScrollContainer/SoundOptions" method="_on_mute_check_toggled"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
